== Version 1.1.0: Not Released ==

Issues Fixed: 121, 138

* Added non-empty matchers to complement the emptiness-matching forms.

  - nonEmptyString()
  - nonEmptyArray()
  - nonEmptyTraversable()

* Added ability to pass variable arguments to several array-based matcher
  factory methods so they work like allOf() et al.

  - anArray()
  - arrayContainingInAnyOrder(), containsInAnyOrder()
  - arrayContaining(), contains()
  - stringContainsInOrder()

* Matchers that accept an array of matchers now also accept variable arguments.
  Any non-matcher arguments are wrapped by IsEqual.


== Version 1.0.0: Released Jan 20 2012 ==

Issues Fixed: 119, 136, 139, 141, 148, 149, 172

* Moved hamcrest.php into Hamcrest folder and renamed to Hamcrest.php.
  This is more in line with PEAR packaging standards.

* Renamed callable() to callableValue() for compatibility with PHP 5.4.

* Added Hamcrest_Text_StringContainsIgnoringCase to assert using stripos().

    assertThat('fOObAr', containsStringIgnoringCase('oba'));
    assertThat('fOObAr', containsString('oba')->ignoringCase());

* Fixed Hamcrest_Core_IsInstanceOf to return false for native types.

* Moved string-based matchers to Hamcrest_Text package.
  StringContains, StringEndsWith, StringStartsWith, and SubstringMatcher

* Hamcrest.php and Hamcrest_Matchers.php are now built from @factory doctags.
  Added @factory doctag to every static factory method.

* Hamcrest_Matchers and Hamcrest.php now import each matcher as-needed
  and Hamcrest.php calls the matchers directly instead of Hamcrest_Matchers.


== Version 0.3.0: Released Jul 26 2010 ==

* Added running count to Hamcrest_MatcherAssert with methods to get and reset it.
  This can be used by unit testing frameworks for reporting.

* Added Hamcrest_Core_HasToString to assert return value of toString() or __toString().

    assertThat($anObject, hasToString('foo'));

* Added Hamcrest_Type_IsScalar to assert is_scalar().