@@ -220,6 +220,16 @@ function anyOf(/* args... */)
 }
 
 /**
+ * Evaluates to false if ANY of the passed in matchers evaluate to true.
+ */
+function noneOf(/* args... */)
+{
+  require_once 'Hamcrest/Core/AnyOf.php';
+  $args = func_get_args();
+  return call_user_func_array(array('Hamcrest_Core_AnyOf', 'noneOf'), $args);
+}
+
+/**
  * This is useful for fluently combining matchers that must both pass.
  * For example:
  * <pre>
